...
                        onClick = onBack,
                        modifier = Modifier.minimumInteractiveComponentSize()
                    ) {
                        Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Navigate back to Main Screen")
                    }
                },
                title = { Text("Settings", fontWeight = FontWeight.Bold) },
                actions = {
                    IconButton(
                        onClick = { isSearchActive = !isSearchActive },
                        modifier = Modifier.minimumInteractiveComponentSize()
                    ) {
                        Icon(
...
